Fix sidebar and navbar dropdown scrollbar colors + breadcrumb empty step is not broken anymore
story #9700 Unify FlamingParrot and BurningParrot navbars

--- a/src/www/themes/FlamingParrot/css/utils/_content.scss
+++ b/src/www/themes/FlamingParrot/css/utils/_content.scss
@@ -35,9 +35,11 @@
             > a {
                 display: block;
                 position: relative;
+                height: 33px;
                 padding: 0 10px 0 30px;
                 transition: padding-right 150ms, border 150ms;
                 border: 1px solid $step-border;
+                border-left-color: transparent;
                 background: $step-background;
                 color: $step-color;
                 font-family: 'SourceSansPro', 'Helvetica Neue', Arial, sans-serif;
@@ -65,15 +67,21 @@
             &:first-child > a {
                 margin: 0;
                 padding-left: 20px;
+                border-left-color: $step-border;
             }
 
             &:last-child > a {
                 border: 1px solid $step-active-border;
+                border-left-color: transparent;
                 color: $step-active-color;
 
                 &::after {
                     box-shadow: 1.3px 1.3px 0 $step-active-border;
                 }
+            }
+
+            &:only-child > a {
+                border: 1px solid $step-active-border;
             }
 
             &:hover {
